Attempt to fix the scroll bar shift issue.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,6 +13,7 @@
   -khtml-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
+  overflow-y: scroll;
 }
 
 .containerRight {
